# django-headless

./: CHANGELOG.md  README.md  pyproject.toml  pytest.ini
headless/: __init__.py  apps.py  registry.py  settings.py  tests.py  utils.py
headless/rest/: apps.py  builder.py  pagination.py
